syntax = "proto3";

package pb;

option go_package = "github.com/sherifzaher/clone-simplebank/pb";

message VerifyEmailRequest {
  int64 email_id = 1;
  string secret_code = 2;
}

message VerifyEmailResponse {
  bool is_verified = 1;
}

//syntax = "proto3";
//
//package pb;
//
//import "user.proto";
//
//option go_package = "github.com/sherifzaher/clone-simplebank/pb";
//
//message CreateUserRequest {
//  string username = 1;
//  string full_name = 2;
//  string email = 3;
//  string password = 4;
//}
//
//message CreateUserResponse {
//  User user = 1;
//}